--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wechat-pay-js",
-  "version": "1.0.0",
-  "description": "wechat pay sdk for nodejs",
+  "name": "wechatpay-v3",
+  "version": "0.1.0",
+  "description": "wechatpay v3 sdk for nodejs",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CodyTseng/wechat-pay-js.git"
+    "url": "git+https://github.com/CodyTseng/wechatpay-v3.git"
   },
   "keywords": [
     "wechat",
@@ -28,9 +28,9 @@
   "author": "CodyTseng",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/CodyTseng/wechat-pay-js/issues"
+    "url": "https://github.com/CodyTseng/wechatpay-v3/issues"
   },
-  "homepage": "https://github.com/CodyTseng/wechat-pay-js#readme",
+  "homepage": "https://github.com/CodyTseng/wechatpay-v3#readme",
   "devDependencies": {
     "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
