--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "build": "tsc",
     "lint": "eslint \"src/**/*.{js,ts}\" --fix",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
   "repository": {
