--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "homepage": "https://github.com/CodyTseng/wechatpay-v3#readme",
   "devDependencies": {
-    "@types/node": "^16.11.9",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.6.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "eslint": "^8.2.0",
@@ -44,6 +45,8 @@
     "lib/*"
   ],
   "dependencies": {
-    "urllib": "^2.37.4"
+    "axios": "^0.27.2",
+    "crypto": "^1.0.1",
+    "lodash": "^4.17.21"
   }
 }
