--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.4.1",
+    "release-it": "^15.5.0",
     "typescript": "^4.5.2"
   },
   "files": [
